--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.17.2",
+    "medusa-file-s3": "^1.4.0",
     "medusa-fulfillment-manual": "^1.1.37",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.23",
-    "medusa-payment-stripe": "^6.0.1",
-    "medusa-plugin-sendgrid": "^1.3.9",
+    "medusa-payment-stripe": "^6.0.5",
+    "medusa-plugin-sendgrid": "^1.3.11",
+    "medusa-react": "^9.0.9",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16",
     "zod": "^3.21.4"
@@ -53,6 +55,7 @@
     "@medusajs/medusa-cli": "^1.3.16",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^17.0.8",
     "babel-preset-medusa-package": "^1.1.13",
     "cross-env": "^7.0.3",
